HS-161 | Add linter