@@ -1,25 +1,17 @@
 package pl.agh.edu.enums;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
 public enum Role {
-    cleaner,
-    cook,
-    manager,
-    receptionist,
-    technician,
-    accountant;
+	cleaner, cook, manager, receptionist, technician, accountant;
 
-    private static final List<Role> VALUES =
-            Collections.unmodifiableList(Arrays.asList(values()));
-    private static final int SIZE = VALUES.size();
-    private static final Random RANDOM = new Random();
+	private static final List<Role> VALUES = List.of(values());
+	private static final int SIZE = VALUES.size();
+	private static final Random RANDOM = new Random();
 
-    public static Role randomRole()  {
-        return VALUES.get(RANDOM.nextInt(SIZE));
-    }
+	public static Role randomRole() {
+		return VALUES.get(RANDOM.nextInt(SIZE));
+	}
 
 }
